Replace Collectors.toList() with Stream.toList()
Modernize stream collection operations by replacing Collectors.toList()
with Stream.toList() introduced in Java 16.

Changes:
- 17 files updated across multiple modules
- Removed unused Collectors import statements where applicable
- Retained Collectors import where joining() or toCollection() is used

Motivation:
- Conciseness: stream.toList() is shorter and more readable
- Performance: Avoids creating an intermediate Collector object
- Immutability: toList() returns an unmodifiable list
- Modern Java: Aligns with Java 16+ idioms since the project requires Java 17

Signed-off-by: Eunseo Song <162149585+eunseo9311@users.noreply.github.com>